test_output_4.txt
   Compiling ox_codegen v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/crates/ox_codegen)
warning: unused variable: `type_str`
   --> crates/ox_codegen/src/convert/class.rs:497:33
    |
497 | ...                   let type_str = param_type.to_string();
    |                           ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_type_str`
    |
    = note: `#[warn(unused_variables)]` on by default

   Compiling ox_orchestrator v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/crates/ox_orchestrator)
   Compiling integration_tests v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests)
warning: `ox_codegen` (lib) generated 1 warning
warning: unused variable: `temp_dir`
  --> tests/src/test_nestjs.rs:55:13
   |
55 |         let temp_dir = TempDir::new().unwrap();
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_temp_dir`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `input_dir`
  --> tests/src/test_nestjs.rs:56:13
   |
56 |         let input_dir = PathBuf::from("fixtures/nestjs_controller/src");
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_input_dir`

warning: `integration_tests` (lib test) generated 2 warnings
    Finished `test` profile [unoptimized + debuginfo] target(s) in 1.46s
     Running unittests src/lib.rs (target/debug/deps/integration_tests-726d51bf8feaca74)

running 1 test
DEBUG convert_prop: Field id, Type ID, is_dependency: true
Compilation failed:
Stderr:
    Updating crates.io index
     Locking 71 packages to latest compatible versions
      Adding axum v0.7.9 (available: v0.8.7)
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
   Compiling itoa v1.0.15
   Compiling bytes v1.11.0
   Compiling pin-project-lite v0.2.16
   Compiling parking_lot_core v0.9.12
   Compiling futures-core v0.3.31
   Compiling smallvec v1.15.1
   Compiling scopeguard v1.2.0
   Compiling serde_core v1.0.228
   Compiling cfg-if v1.0.4
   Compiling lock_api v0.4.14
   Compiling pin-utils v0.1.0
   Compiling once_cell v1.21.3
   Compiling httparse v1.10.1
   Compiling rustversion v1.0.22
   Compiling serde v1.0.228
   Compiling tower-service v0.3.3
   Compiling tracing-core v0.1.35
   Compiling log v0.4.28
   Compiling futures-task v0.3.31
   Compiling futures-channel v0.3.31
   Compiling sync_wrapper v1.0.2
   Compiling futures-util v0.3.31
   Compiling httpdate v1.0.3
   Compiling serde_json v1.0.145
   Compiling ryu v1.0.20
   Compiling atomic-waker v1.1.2
   Compiling tower-layer v0.3.3
   Compiling http v1.4.0
   Compiling percent-encoding v2.3.2
   Compiling tracing v0.1.41
   Compiling mime v0.3.17
   Compiling form_urlencoded v1.2.2
   Compiling memchr v2.7.6
   Compiling matchit v0.7.3
   Compiling syn v2.0.111
   Compiling http-body v1.0.1
   Compiling http-body-util v0.1.3
   Compiling signal-hook-registry v1.4.7
   Compiling mio v1.1.0
   Compiling socket2 v0.6.1
   Compiling parking_lot v0.12.5
   Compiling serde_path_to_error v0.1.20
   Compiling tokio-macros v2.6.0
   Compiling serde_derive v1.0.228
   Compiling async-trait v0.1.89
   Compiling tokio v1.48.0
   Compiling axum-core v0.4.5
   Compiling serde_urlencoded v0.7.1
   Compiling hyper v1.8.1
   Compiling tower v0.5.2
   Compiling hyper-util v0.1.18
   Compiling axum v0.7.9
   Compiling test_types v0.1.0 (/tmp/.tmpITqRzT)
warning: unreachable expression
  --> src/main.rs:12:5
   |
12 |     return todo!();
   |     ^^^^^^^-------
   |     |      |
   |     |      any code following this expression is unreachable
   |     unreachable expression
   |
   = note: `#[warn(unreachable_code)]` on by default

error[E0308]: mismatched types
  --> src/main.rs:24:17
   |
24 |             id: id,
   |                 ^^ expected `Arc<String>`, found `String`
   |
   = note: expected struct `Arc<String>`
              found struct `String`
help: call `Into::into` on this expression to convert `String` into `Arc<String>`
   |
24 |             id: id.into(),
   |                   +++++++

error[E0308]: mismatched types
  --> src/main.rs:52:42
   |
52 |                 assert_eq!(container.id, "123");
   |                                          ^^^^^ expected `Arc<String>`, found `&str`
   |
   = note: expected struct `Arc<String>`
           found reference `&str`

warning: unused variable: `id`
  --> src/main.rs:11:25
   |
11 | pub fn create_container(id: ID, values: NumberList) -> Container {
   |                         ^^ help: if this is intentional, prefix it with an underscore: `_id`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `values`
  --> src/main.rs:11:33
   |
11 | pub fn create_container(id: ID, values: NumberList) -> Container {
   |                                 ^^^^^^ help: if this is intentional, prefix it with an underscore: `_values`

warning: unused variable: `list`
  --> src/main.rs:39:21
   |
39 | pub fn process_list(list: Vec<f64>) -> f64 {
   |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_list`

For more information about this error, try `rustc --explain E0308`.
warning: `test_types` (bin "test_types") generated 4 warnings
error: could not compile `test_types` (bin "test_types") due to 2 previous errors; 4 warnings emitted

Stdout:

Generated Code:
pub type ID = String;
pub type NumberList = Vec<f64>;
#[derive(Default, Debug, Clone, PartialEq)]
pub struct Container {
    pub id: ID,
    pub values: Vec<f64>,
    pub optional: Option<String>,
    pub maybe: Option<f64>,
}
pub fn create_container(id: ID, values: NumberList) -> Container {
    return todo!();
}
#[derive(Default, Debug, Clone, PartialEq)]
pub struct ContainerClass {
    pub id: std::sync::Arc<ID>,
    pub values: Vec<f64>,
    pub optional: Option<String>,
    pub maybe: Option<f64>,
}
impl ContainerClass {
    pub fn new(id: ID, values: Vec<f64>) -> Self {
        Self {
            id: id,
            values: values,
            optional: Some(String::from("present")),
            maybe: None,
        }
    }
    pub fn new_di(id: std::sync::Arc<ID>) -> Self {
        Self {
            id: id,
            values: Default::default(),
            optional: Default::default(),
            maybe: Default::default(),
        }
    }
}
pub fn process_list(list: Vec<f64>) -> f64 {
    return 42f64;
}


thread 'test_types::type_tests::test_compile_and_execute_advanced_types' panicked at tests/src/test_types.rs:137:9:
Compilation failed
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
test test_types::type_tests::test_compile_and_execute_advanced_types ... FAILED

failures:

failures:
    test_types::type_tests::test_compile_and_execute_advanced_types

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 29 filtered out; finished in 9.23s

error: test failed, to rerun pass `-p integration_tests --lib`
